tests/test0202.exp
Parse error, unexpected := ( tests/test0202.ctr: 3 )
Invalid left-hand assignment.
