tests/test0202.ctr
#SINGLE_LANGUAGE
#Test invalid left hand assignment with Nil
Nil := True.
